@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +17,6 @@
 package org.springframework.boot.build;
 
 import java.io.File;
-import java.net.URI;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
@@ -26,6 +25,7 @@ import org.asciidoctor.gradle.jvm.AbstractAsciidoctorTask;
 import org.asciidoctor.gradle.jvm.AsciidoctorJExtension;
 import org.asciidoctor.gradle.jvm.AsciidoctorJPlugin;
 import org.asciidoctor.gradle.jvm.AsciidoctorTask;
+import org.gradle.api.JavaVersion;
 import org.gradle.api.Project;
 import org.gradle.api.tasks.PathSensitivity;
 import org.gradle.api.tasks.Sync;
@@ -38,13 +38,6 @@ import org.springframework.util.StringUtils;
  * the plugin is applied:
  *
  * <ul>
- * <li>The {@code https://repo.spring.io/release} Maven repository is configured and
- * limited to dependencies in the following groups:
- * <ul>
- * <li>{@code io.spring.asciidoctor}
- * <li>{@code io.spring.asciidoctor.backends}
- * <li>{@code io.spring.docresources}
- * </ul>
  * <li>All warnings are made fatal.
  * <li>The version of AsciidoctorJ is upgraded to 2.4.3.
  * <li>An {@code asciidoctorExtensions} configuration is created.
@@ -75,23 +68,11 @@ class AsciidoctorConventions {
 
 	void apply(Project project) {
 		project.getPlugins().withType(AsciidoctorJPlugin.class, (asciidoctorPlugin) -> {
-			configureDocumentationDependenciesRepository(project);
 			makeAllWarningsFatal(project);
 			upgradeAsciidoctorJVersion(project);
 			createAsciidoctorExtensionsConfiguration(project);
 			project.getTasks().withType(AbstractAsciidoctorTask.class,
 					(asciidoctorTask) -> configureAsciidoctorTask(project, asciidoctorTask));
-		});
-	}
-
-	private void configureDocumentationDependenciesRepository(Project project) {
-		project.getRepositories().maven((mavenRepo) -> {
-			mavenRepo.setUrl(URI.create("https://repo.spring.io/release"));
-			mavenRepo.mavenContent((mavenContent) -> {
-				mavenContent.includeGroup("io.spring.asciidoctor");
-				mavenContent.includeGroup("io.spring.asciidoctor.backends");
-				mavenContent.includeGroup("io.spring.docresources");
-			});
 		});
 	}
 
@@ -106,9 +87,9 @@ class AsciidoctorConventions {
 	private void createAsciidoctorExtensionsConfiguration(Project project) {
 		project.getConfigurations().create(EXTENSIONS_CONFIGURATION_NAME, (configuration) -> {
 			project.getConfigurations().matching((candidate) -> "dependencyManagement".equals(candidate.getName()))
-					.all((dependencyManagement) -> configuration.extendsFrom(dependencyManagement));
+					.all(configuration::extendsFrom);
 			configuration.getDependencies().add(project.getDependencies()
-					.create("io.spring.asciidoctor.backends:spring-asciidoctor-backends:0.0.2"));
+					.create("io.spring.asciidoctor.backends:spring-asciidoctor-backends:0.0.4"));
 			configuration.getDependencies()
 					.add(project.getDependencies().create("org.asciidoctor:asciidoctorj-pdf:1.5.3"));
 		});
@@ -118,6 +99,7 @@ class AsciidoctorConventions {
 		asciidoctorTask.configurations(EXTENSIONS_CONFIGURATION_NAME);
 		configureCommonAttributes(project, asciidoctorTask);
 		configureOptions(asciidoctorTask);
+		configureForkOptions(asciidoctorTask);
 		asciidoctorTask.baseDirFollowsSourceDir();
 		createSyncDocumentationSourceTask(project, asciidoctorTask);
 		if (asciidoctorTask instanceof AsciidoctorTask) {
@@ -134,6 +116,14 @@ class AsciidoctorConventions {
 		attributes.put("spring-boot-artifactory-repo", ArtifactoryRepository.forProject(project));
 		attributes.put("revnumber", null);
 		asciidoctorTask.attributes(attributes);
+	}
+
+	// See https://github.com/asciidoctor/asciidoctor-gradle-plugin/issues/597
+	private void configureForkOptions(AbstractAsciidoctorTask asciidoctorTask) {
+		if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_16)) {
+			asciidoctorTask.forkOptions((options) -> options.jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+					"--add-opens", "java.base/java.io=ALL-UNNAMED"));
+		}
 	}
 
 	private String determineGitHubTag(Project project) {
